Change HTML title

--- a/meteor/client/main.html
+++ b/meteor/client/main.html
@@ -1,10 +1,8 @@
 <head>
-  <title>ipsilum</title>
+  <title>dO2s</title>
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
 </head>
 
 <body>
   <div id="react-root"></div>
 </body>
-
-
