Added react-bootstrap package
Changes to implement this package on the app

--- a/meteor/client/main.html
+++ b/meteor/client/main.html
@@ -1,6 +1,11 @@
 <head>
   <title>dO2s</title>
-    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="public/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
 </head>
 
 <body>
