--- a/meteor/client/main.html
+++ b/meteor/client/main.html
@@ -1,6 +1,7 @@
 <head>
   <title>dO2s</title>
     <link href="public/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+    <script src="https://use.fontawesome.com/9dea9c8984.js"></script>
 </head>
 
 <body>
