--- a/meteor/client/main.html
+++ b/meteor/client/main.html
@@ -4,7 +4,7 @@
   <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
   <meta name="description" content="Webservices for drones.">
   <meta name="viewport" content="initial-scale=1, minimal-ui, maximum-scale=1, minimum-scale=1" />
-  <script src="https://use.fontawesome.com/9dea9c8984.js"></script>
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 </head>
 
 <body>
