For Testing App

--- a/meteor/private/email-templates/reset-password.html
+++ b/meteor/private/email-templates/reset-password.html
@@ -308,8 +308,8 @@
 				</table>
 				<div class="footer">
 					<table width="100%">
-						<tr>
-							<td class="aligncenter content-block">Follow <a href="http://twitter.com/dO2s_app">@dO2s_app</a> on Twitter.</td>
+            <tr>
+							<td class="aligncenter content-block">Follow <a href="http://twitter.com/ortoSky_SRM">@ortoSky_SRM</a> on Twitter.</td>
 						</tr>
 					</table>
 				</div></div>
