--- a/meteor/client/main.html
+++ b/meteor/client/main.html
@@ -1,6 +1,6 @@
 <head>
   <meta charset="utf-8">
-  <title>dO2s</title>
+  <title>Ipsilum</title>
   <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
   <meta name="description" content="Webservices for drones.">
   <meta name="viewport" content="initial-scale=1, minimal-ui, maximum-scale=1, minimum-scale=1" />
