--- a/meteor/private/email-templates/verify-email.html
+++ b/meteor/private/email-templates/verify-email.html
@@ -304,7 +304,7 @@
 				<div class="footer">
 					<table width="100%">
 						<tr>
-							<td class="aligncenter content-block">Follow <a href="http://twitter.com/dO2s_app">@dO2s_app</a> on Twitter.</td>
+							<td class="aligncenter content-block">Follow <a href="http://twitter.com/ortoSky_SRM">@ortoSky_SRM</a> on Twitter.</td>
 						</tr>
 					</table>
 				</div></div>
